fixed warning for dog cards, changed overflow to scroll for all cards

--- a/server/static/styles/global.css
+++ b/server/static/styles/global.css
@@ -41,7 +41,7 @@ body {
     max-height: 300px;
     min-height: 300px;
     width: 100%;
-    overflow: hidden;
+    overflow: scroll;
 }
 
 .cardImg {
